--- a/thule-ui/src/main/webapp/src/app/sign-up/sign-up.component.html
+++ b/thule-ui/src/main/webapp/src/app/sign-up/sign-up.component.html
@@ -1,6 +1,6 @@
 <div class="space space612211">
   <div class="space space3112211">
-    <img class="image7" src="/assets/images/default.svg" src="/assets/images/Logo horizontal splash white@2x.svg">
+    <img class="image7" src="./assets/images/default.svg" src="./assets/images/Logo horizontal splash white@2x.svg">
   </div>
   <div class="space space2112111">
     <div class="space space5112211">
