--- a/thule-ui/src/main/webapp/src/app/student-profile/card13/card13.component.html
+++ b/thule-ui/src/main/webapp/src/app/student-profile/card13/card13.component.html
@@ -10,7 +10,7 @@
       <div class="space space71">
         <div class="space space82">
           <div class="space space92">
-            <img class="image18" src="/assets/images/default.svg" src="/assets/images/Avatar2.png">
+            <img class="image18" src="./assets/images/default.svg" src="./assets/images/Avatar2.png">
           </div>
           <div class="space space911">
             <nb-icon class="icon811" nbTooltip="" icon="edit"></nb-icon>
