--- a/thule-ui/src/main/webapp/src/app/student/card1/card1.component.html
+++ b/thule-ui/src/main/webapp/src/app/student/card1/card1.component.html
@@ -10,7 +10,7 @@
       <div class="space space7">
         <div class="space space8">
           <div class="space space9">
-            <img class="image1" src="/assets/images/default.svg" src="/assets/images/Avatar1.png">
+            <img class="image1" src="./assets/images/default.svg" src="./assets/images/Avatar1.png">
           </div>
           <div class="space space91">
             <nb-icon class="icon8" nbTooltip="" icon="edit"></nb-icon>
