--- a/thule-ui/src/main/webapp/src/app/forgot-password/forgot-password.component.html
+++ b/thule-ui/src/main/webapp/src/app/forgot-password/forgot-password.component.html
@@ -1,6 +1,6 @@
 <div class="space space61221111">
   <div class="space space311221111">
-    <img class="image9" src="./assets/images/default.svg" src="./assets/images/Logo horizontal splash white@2x2.svg">
+    <img class="image9" src="assets/images/default.svg" src="assets/images/Logo horizontal splash white@2x2.svg">
   </div>
   <div class="space space211211111">
     <div class="space space511221111">
