--- a/thule-ui/src/main/webapp/src/app/log-in/log-in.component.html
+++ b/thule-ui/src/main/webapp/src/app/log-in/log-in.component.html
@@ -1,6 +1,6 @@
 <div class="space space6122111">
   <div class="space space31122111">
-    <img class="image8" src="./assets/images/default.svg" src="./assets/images/Logo horizontal splash white@2x1.svg">
+    <img class="image8" src="assets/images/default.svg" src="assets/images/Logo horizontal splash white@2x1.svg">
   </div>
   <div class="space space21121111">
     <div class="space space51122111">
