--- a/thule-ui/src/main/webapp/src/app/student-details/card131/card131.component.html
+++ b/thule-ui/src/main/webapp/src/app/student-details/card131/card131.component.html
@@ -10,7 +10,7 @@
       <div class="space space711">
         <div class="space space821">
           <div class="space space921">
-            <img class="image181" src="./assets/images/default.svg" src="./assets/images/Avatar3.png">
+            <img class="image181" src="assets/images/default.svg" src="assets/images/Avatar3.png">
           </div>
           <div class="space space9111">
             <nb-icon class="icon8111" nbTooltip="" icon="edit"></nb-icon>
