--- a/thule-ui/src/main/webapp/src/app/student-profile/card112/card112.component.scss
+++ b/thule-ui/src/main/webapp/src/app/student-profile/card112/card112.component.scss
@@ -19,7 +19,7 @@
     padding: 0;
     overflow: visible;
     background-color: unset;
-    background-image: url('./assets/images/BG1.jpg');
+    background-image: url('assets/images/BG1.jpg');
     background-size: cover;
   }
 
