--- a/thule-ui/src/main/webapp/src/app/student-list/table121/table121.component.html
+++ b/thule-ui/src/main/webapp/src/app/student-list/table121/table121.component.html
@@ -70,7 +70,7 @@
       </td>
       <td class="slot">
         <div class="space space2221">
-          <img class="image5" src="assets/images/default.svg" src="assets/images/Men av 1.jpg">
+          <img class="image5" src="/assets/images/default.svg" src="/assets/images/Men av 1.jpg">
         </div>
       </td>
       <td class="slot">
@@ -134,7 +134,7 @@
       </td>
       <td class="slot">
         <div class="space space2421">
-          <img class="image6" src="assets/images/default.svg" src="assets/images/Girl av 1.jpg">
+          <img class="image6" src="/assets/images/default.svg" src="/assets/images/Girl av 1.jpg">
         </div>
       </td>
       <td class="slot">
@@ -198,7 +198,7 @@
       </td>
       <td class="slot">
         <div class="space space252">
-          <img class="image19" src="assets/images/default.svg" src="assets/images/Men av 2.jpg">
+          <img class="image19" src="/assets/images/default.svg" src="/assets/images/Men av 2.jpg">
         </div>
       </td>
       <td class="slot">
@@ -262,7 +262,7 @@
       </td>
       <td class="slot">
         <div class="space space333">
-          <img class="image20" src="assets/images/default.svg" src="assets/images/Girl av 2.jpg">
+          <img class="image20" src="/assets/images/default.svg" src="/assets/images/Girl av 2.jpg">
         </div>
       </td>
       <td class="slot">
@@ -326,7 +326,7 @@
       </td>
       <td class="slot">
         <div class="space space343">
-          <img class="image21" src="assets/images/default.svg" src="assets/images/Men av 3.jpg">
+          <img class="image21" src="/assets/images/default.svg" src="/assets/images/Men av 3.jpg">
         </div>
       </td>
       <td class="slot">
