--- a/thule-ui/src/main/webapp/src/app/student/card1112/card1112.component.scss
+++ b/thule-ui/src/main/webapp/src/app/student/card1112/card1112.component.scss
@@ -68,7 +68,7 @@
     > nb-card-footer {
       padding: 0;
     }
-    background-image: url('assets/images/BG 4.png');
+    background-image: url('/assets/images/BG 4.png');
     background-size: cover;
   }
 
