--- a/thule-ui/src/main/webapp/src/app/teacher-details/card15/card15.component.html
+++ b/thule-ui/src/main/webapp/src/app/teacher-details/card15/card15.component.html
@@ -10,7 +10,7 @@
       <div class="space space73">
         <div class="space space84">
           <div class="space space94">
-            <img class="image17" src="assets/images/default.svg" src="assets/images/Avatar4.png">
+            <img class="image17" src="/assets/images/default.svg" src="/assets/images/Avatar4.png">
           </div>
           <div class="space space913">
             <nb-icon class="icon810" nbTooltip="" icon="edit"></nb-icon>
