--- a/thule-ui/src/main/webapp/src/app/app.component.html
+++ b/thule-ui/src/main/webapp/src/app/app.component.html
@@ -7,13 +7,13 @@
           <nb-icon class="icon btn-icon" icon="menu"></nb-icon>
           <span></span>
         </button>
-        <img class="image10" src="/assets/images/default.svg" [src]="src$ | async">
+        <img class="image10" src="~/../assets/images/default.svg" [src]="src$ | async">
       </div>
       <div class="space space11">
         <nb-icon class="icon" nbTooltip="" icon="search"></nb-icon>
         <nb-icon class="icon1" nbTooltip="" icon="bell-outline"></nb-icon>
         <nb-icon class="icon2" nbTooltip="" icon="email-outline"></nb-icon>
-        <img class="image" src="/assets/images/default.svg" src="/assets/images/Avatar.png">
+        <img class="image" src="~/../assets/images/default.svg" src="~/../assets/images/Avatar.png">
         <p class="text text-undefined text-bold text-alignment-left text-transform-none paragraph">Ajay</p>
         <nb-icon class="icon3" nbTooltip="" icon="chevron-down-outline"></nb-icon>
       </div>
