--- a/thule-ui/src/main/webapp/src/app/page-not-found/page-not-found.component.html
+++ b/thule-ui/src/main/webapp/src/app/page-not-found/page-not-found.component.html
@@ -1,7 +1,7 @@
 <div class="space space50">
   <div class="space space551">
     <div class="space space5421">
-      <img class="image27" src="/assets/images/default.svg" src="/assets/images/Ресурс 1@4x-100.jpg">
+      <img class="image27" src="~/../assets/images/default.svg" src="~/../assets/images/Ресурс 1@4x-100.jpg">
     </div>
     <div class="space space60">
       <h4 class="heading42 text-undefined text-alignment-center text-transform-none">Page Not found</h4>
