--- a/thule-ui/src/main/webapp/src/app/student-profile/card1122/card1122.component.scss
+++ b/thule-ui/src/main/webapp/src/app/student-profile/card1122/card1122.component.scss
@@ -19,7 +19,7 @@
     padding: 0;
     overflow: visible;
     background-color: unset;
-    background-image: url('~/../assets/images/BG3.jpg');
+    background-image: url('/assets/images/BG3.jpg');
     background-size: cover;
   }
 
