--- a/thule-ui/src/main/webapp/src/app/student/card111/card111.component.scss
+++ b/thule-ui/src/main/webapp/src/app/student/card111/card111.component.scss
@@ -70,7 +70,7 @@
     > nb-card-footer {
       padding: 0;
     }
-    background-image: url('~/../assets/images/BG 2.png');
+    background-image: url('/assets/images/BG 2.png');
     background-size: cover;
   }
 
